--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -1,1 +1,3 @@
-<p style="text-align: center; font-size: 20px; font-weight: bold;">ยินดีต้อนรับ</p>
+<div class="welcome-container">
+  <p class="welcome-text">ยินดีต้อนรับ</p>
+</div>
