--- a/src/app/page2/page2.component.html
+++ b/src/app/page2/page2.component.html
@@ -1,2 +1,4 @@
-<p style="text-align: center; font-size: 20px; font-weight: bold;">กรุณาเพิ่มเพื่อน</p>
-<button style="width: 100%; height: 50px; font-size: 20px; font-weight: bold; background-color: #000000; color: #ffffff; border: none; border-radius: 10px; cursor: pointer;" (click)="addFriend()">เพิ่มเพื่อน</button>
+<div class="container">
+  <h1>เพิ่มเพื่อนกับ LINE OA</h1>
+  <button (click)="addFriend()">เพิ่มเพื่อน</button>
+</div>
